Fix flex basis for cards on smaller screens

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ tr > td:last-child {
 
     .card {
         margin-bottom: 25px;
-        flex: 1;
+        flex: 1 1 auto;
     }
 
     .headings {
